--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 										Você vai encontrar também, minhas experiências profissionais, habilidades, ferramentas e conceitos envolvendo a Ciência de Dados. <br /> Sinta-se à vontade para entrar em contato através dos links no final da página.</p>
 									</div>
 									<span class="image object">
-										<img src="img/IMG_4420aa.jpg" alt="" />
+										<img src="img/IMG_4420aaa.jpg" alt="" />
 									</span>
 								</section>
 
