--- a/index.html
+++ b/index.html
@@ -157,8 +157,19 @@
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/data_analysis.jpg" alt="" /></a>
-											<h3>Identificação de imóveis para compra e revenda a fim de maximizar o lucro</h3>
-											<p>Identificação de imóveis abaixo do preço médio de venda e definição do preço ideal de revenda, a partir de uma análise exploratória de dados em Python.</p>
+											<h3>Modelos de aprendizado de máquina para prever as vendas</h3>
+											<p>O projeto foi desenvolvido com base no método de gerenciamento de projetos CRISP-DS (Cross-Industry Standard Process - Data Science, também conhecido como CRISP-DM), com as seguintes etapas:
+                                                                                        <ul>
+                                                                                         <li> Entendimento do Negócio </li>
+                                                                                         <li> Coleta de dados </li>
+                                                                                         <li> Limpeza de Dados </li>
+                                                                                         <li> Análise Exploratória de Dados (EDA) </li>
+                                                                                         <li> Preparação de dados </li>
+                                                                                         <li> Modelagem e ajuste fino de Machine Learning </li>
+                                                                                         <li> Modelo e Avaliação de Desempenho de Negócios/Resultados </li>
+                                                                                         <li> Implantação do modelo </li>
+									                </ul>
+                                                                                         Um projeto end-to-end de Data Science com uma regressão adaptada para séries temporais como solução criou quatro modelos de aprendizado de máquina para prever as vendas. As previsões podem ser acessadas pelos usuários por meio de um bot do aplicativo de smartphone Telegram.</p>
 											<h4>As ferramentas utilizadas foram:</h4>
 											<ul>
 												<li>Python, Pandas, Numpy e Seaborn.</li>
