--- a/index.html
+++ b/index.html
@@ -175,11 +175,12 @@
 												<li>Python, Pandas, Numpy e Seaborn.</li>
 												<li>Anaconda, Pycharm e Jupyter Notebook.</li>
 												<li>Mapas interativos com Plotly e Folium.</li>
-												<li>Heroku Cloud.</li>
-												<li>Streamlit Python framework web.</li>
+												<li>Random Forest Regressor</li>
+											        <li>XGBoost Regressor</li>
+												<li>Time-Series method</li>
 											</ul>
 											<ul class="actions">
-												<li><a href="#" class="button">Saiba Mais</a></li>
+												<li><a href="https://github.com/danielacorrea94/Kaggle-Rossman-Sales-Prediction" class="button">Saiba Mais</a></li>
 											</ul>
 										</article>
 									</div>
