--- a/index.html
+++ b/index.html
@@ -55,9 +55,15 @@
 
 										<!-- Content -->
 											<h2 id="content">Meu nome é Daniela Leite Corrêa</h2>
-											<p>Sou formada em Oceanografia e mestre em Sistemas Marinhos e Costeiros. Trabalho com análise de dados científicos</p>
+											<p>Sou formada em Oceanografia (UERJ) e mestre em Sistemas Marinhos e Costeiros (UALG), Portugal. Trabalho com análise de dados científicos desde 2015, utilizando a linguação de programação MATLAB e migrando para Python posteriormente.
+											Como oceanógrafa física, realizei análises de sensoriamento remoto e dados in situ, com séries temporais superiores a 30 anos e análises estatísticas de correlação e interpolação de dados. Devido a prévia experiência em linguagem de programação, 
+										        realizei a migração de carreira para Cientista de Dados, onde aprimoro a cada dia minhas habilidades computacionais e amplio meus conhecimentos para além do Python. 
+											 
+											</p>
 											<p></p>
-											<p>Estou buscando uma oportunidade de trabalhar profissionalmente como Cientista de Dados para melhorar a tomada de decisão da empresa, através da construção de soluções usando dados.</p>
+											<p>Estou buscando uma oportunidade de trabalhar profissionalmente como Cientista de Dados para melhorar a tomada de decisão da empresa, através da construção de soluções usando dados. Como cientista gosto de trabalhar em grupo, gosto de receber sugestões,
+											e tenho a ambição de trabalhar com novos dados, variáveis e plataformas. 
+											</p>
 									</section>
 
 							<!-- Section -->
