--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 											<h1>Olá, seja muito bem-vindo (a) ao meu portfólio de <br />
 											projetos de Ciência de Dados.</h1>
 										</header>
-										<p>Nessa página, eu demonstro minhas habilidades de resolver problemas de negócio utilizando conceitos e ferramentas da Ciência de Dados, através de projetos com dados públicos.<br />
+										<p align="justify">Nessa página, eu demonstro minhas habilidades de resolver problemas de negócio utilizando conceitos e ferramentas da Ciência de Dados, através de projetos com dados públicos.<br />
 										Você vai encontrar também, minhas experiências profissionais, habilidades, ferramentas e conceitos envolvendo a Ciência de Dados. <br /> Sinta-se à vontade para entrar em contato através dos links no final da página.</p>
 									</div>
 									<span class="image object">
@@ -55,13 +55,13 @@
 
 										<!-- Content -->
 											<h2 id="content">Meu nome é Daniela Leite Corrêa</h2>
-											<p>Sou formada em Oceanografia (UERJ) e mestre em Sistemas Marinhos e Costeiros (UALG), Portugal. Trabalho com análise de dados científicos desde 2015, utilizando a linguação de programação MATLAB e migrando para Python posteriormente.
+											<p align="justify">Sou formada em Oceanografia (UERJ) e mestre em Sistemas Marinhos e Costeiros (UALG), Portugal. Trabalho com análise de dados científicos desde 2015, utilizando a linguação de programação MATLAB e migrando para Python posteriormente.
 											Como oceanógrafa física, realizei análises de sensoriamento remoto e dados in situ, com séries temporais superiores a 30 anos e análises estatísticas de correlação e interpolação de dados. Devido a prévia experiência em linguagem de programação, 
 										        realizei a migração de carreira para Cientista de Dados, onde aprimoro a cada dia minhas habilidades computacionais e amplio meus conhecimentos para além do Python. 
 											 
 											</p>
 											<p></p>
-											<p>Estou buscando uma oportunidade de trabalhar profissionalmente como Cientista de Dados para melhorar a tomada de decisão da empresa, através da construção de soluções usando dados. Como cientista gosto de trabalhar em grupo, gosto de receber sugestões,
+											<p align="justify">Estou buscando uma oportunidade de trabalhar profissionalmente como Cientista de Dados para melhorar a tomada de decisão da empresa, através da construção de soluções usando dados. Como cientista gosto de trabalhar em grupo, gosto de receber sugestões,
 											e tenho a ambição de trabalhar com novos dados, variáveis e plataformas. 
 											</p>
 									</section>
@@ -145,8 +145,8 @@
 										<article>
 											<a href="https://github.com/danielacorrea94/Curry_Company_Project" class="image"><img src="images/food_market.jpg" alt="" /></a>
 											<h3>Desenvolvimento de um Painel Gerencial para Marketplace de Entregas com o Streamlit</h3>
-											<p>Nesse projeto, os conceitos de Programação em Python, manipulação de dados, pensamento estratégico e lógica de negócio, junto com ferramentas de desenvolvimetno web como o Streamlit e Github, foram usados para desenvolver um painel gerencial com as principais métricas de uma empresa marketplace de delivery de comida na India.</p>
-											<p>O resultado final do projeto foi um painel hospedado em um ambiente Cloud e disponibilizado através de um link web. O painel pode ser acessado por qualquer dispositivo conectado na internet.</p>
+											<p align="justify">Nesse projeto, os conceitos de Programação em Python, manipulação de dados, pensamento estratégico e lógica de negócio, junto com ferramentas de desenvolvimetno web como o Streamlit e Github, foram usados para desenvolver um painel gerencial com as principais métricas de uma empresa marketplace de delivery de comida na India.</p>
+											<p align="justify">O resultado final do projeto foi um painel hospedado em um ambiente Cloud e disponibilizado através de um link web. O painel pode ser acessado por qualquer dispositivo conectado na internet.</p>
 											<h4>As ferramentas utilizadas foram:</h4>
 											<ul>
 												<li>Python.</li>
@@ -164,7 +164,7 @@
 										<article>
 											<a href="#" class="image"><img src="images/data_analysis.jpg" alt="" /></a>
 											<h3>Modelos de aprendizado de máquina para prever as vendas</h3>
-											<p>O projeto foi desenvolvido com base no método de gerenciamento de projetos CRISP-DS (Cross-Industry Standard Process - Data Science, também conhecido como CRISP-DM), com as seguintes etapas:
+											<p align="justify">O projeto foi desenvolvido com base no método de gerenciamento de projetos CRISP-DS (Cross-Industry Standard Process - Data Science, também conhecido como CRISP-DM), com as seguintes etapas:
                                                                                         <ul>
                                                                                          <li> Entendimento do Negócio </li>
                                                                                          <li> Coleta de dados </li>
