--- a/index.html
+++ b/index.html
@@ -126,14 +126,15 @@
 										</header>
 
 
-											<h2 id="content">4+ Projetos completos de Ciência de Dados</h2>
-											<p>Construção de soluções de dados para problemas de negócio, próximos dos desafios reais das empresas, utilizando dados públicos de competições de Ciência de Dados, onde eu abordei o problema desde a concepção do desafio de negócio até a publicação do algoritmo treinado em produção, utilizando ferramentas de Cloud Computing.</p>
+											<h2 id="content">8+ Projetos computacionais </h2>
+											<p align="justify"> Desde 2015, trabalhando com linguagem de programação (MATLAB/PYTHON) com diversos dados e modelos de parâmetros físicos, como temperatura da água do mar, correntes oceânicas, velocidade/direção do vento, altimetria do oceano, concentração de clorofila, boias oceanográficas internacionais, entre outros dados.
+											Trabalhei em projetos internacionais: Portugal, Estados Unidos da América e Noruega.
+											</p>
 
-											<h2 id="content">3+ anos como Analista de Risco</h2>
-											<p>Estudo e seleção de ativos de baixo risco para clientes com perfil de investidor conservador. Rotinas de atualização de relatórios e métricas para os "steakholder".</p>
+											
 
-											<h2 id="content">2+ anos como monitor de Econometria </h2>
-											<p>Correção de provas, exercícios e monitorias ao vivo para tirar dúvidas dos alunos.</p>
+											<h2 id="content">1+ Cientista de Dados  </h2>
+											<p align="justify"> Realizei a migração de carreira para Cientista de Dados devido ao meu breve conhecimento de linguagem de programação, onde aprendo a cada dia sobre novas ferramentas e trabalho com predição de vendas e modelos de Machine Learning.   </p>
                 </section>
 
 							<!-- Section -->
@@ -175,7 +176,7 @@
                                                                                          <li> Modelo e Avaliação de Desempenho de Negócios/Resultados </li>
                                                                                          <li> Implantação do modelo </li>
 									                </ul>
-                                                                                         Um projeto end-to-end de Data Science com uma regressão adaptada para séries temporais como solução criou quatro modelos de aprendizado de máquina para prever as vendas. As previsões podem ser acessadas pelos usuários por meio de um bot do aplicativo de smartphone Telegram.</p>
+                                                                                        <p align="justify"> Um projeto end-to-end de Data Science com uma regressão adaptada para séries temporais como solução criou quatro modelos de aprendizado de máquina para prever as vendas. As previsões podem ser acessadas pelos usuários por meio de um bot do aplicativo de smartphone Telegram.</p>
 											<h4>As ferramentas utilizadas foram:</h4>
 											<ul>
 												<li>Python, Pandas, Numpy e Seaborn.</li>
