--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 								<section id="banner">
 									<div class="content">
 										<header>
-											<h1 align="justify">Olá, seja muito bem-vindo (a) ao meu portfólio de <br />
+											<h1 align="justify">Olá, seja muito bem-vindo ao meu portfólio de <br />
 											projetos de Ciência de Dados.</h1>
 										</header>
 										<p align="justify">Nessa página, eu demonstro minhas habilidades de resolver problemas de negócio utilizando conceitos e ferramentas da Ciência de Dados, através de projetos com dados públicos.<br />
